Personal/src/objects/Job_Application__c.object
<CustomObject>
    <fields>
        <fullName>Average_Review_Score__c</fullName>
        <formula>IF (Total_Reviews__c&lt;&gt;0, Total_Review_Score__c / Total_Reviews__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Review Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Candidate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Candidate</label>
        <referenceTo>Candidate__c</referenceTo>
        <relationshipLabel>Job Applications</relationshipLabel>
        <relationshipName>Job_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Competency_Rating__c</fullName>
        <formula>IF( Average_Review_Score__c &lt; 3, &quot;Not Qualified&quot;,  IF( Average_Review_Score__c &lt;3.75, &quot;Minimally Qualified&quot;,  IF( Average_Review_Score__c &lt; 4.75, &quot;Qualified&quot;, &quot;Highly Qualified&quot;) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Competency Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Candidate__r.Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Application_Number__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Application Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <formula>Candidate__r.First_Name__c &amp; &quot; &quot; &amp; Candidate__r.Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Job_Applications__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Job Applications</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>Candidate__r.Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Position</label>
        <referenceTo>Position__c</referenceTo>
        <relationshipLabel>Job Applications</relationshipLabel>
        <relationshipName>Job_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <formula>IF( Average_Review_Score__c &gt;= 3.5, IMAGE(&quot;/img/samples/light_green.gif&quot;, &quot;Green&quot;) , IF(Average_Review_Score__c &gt;= 2.5, IMAGE(&quot;/img/samples/light_yellow.gif&quot;, &quot;Yellow&quot;) , IMAGE(&quot;/img/samples/light_red.gif&quot;, &quot;Red&quot;) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <picklist>
            <controllingField>Status__c</controllingField>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Screen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schedule Interviews</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interviews Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preparing Offer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offer Extended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Position Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Review_Score__c</fullName>
        <label>Total Review Score</label>
        <summarizedField>Review__c.Overall_Score__c</summarizedField>
        <summaryForeignKey>Review__c.Job_Application__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Reviews__c</fullName>
        <label>Total Reviews</label>
        <summaryForeignKey>Review__c.Job_Application__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Job Application</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Position__c</columns>
        <columns>Name__c</columns>
        <columns>Phone__c</columns>
        <columns>Rating__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>APP-{0000}</displayFormat>
        <label>Job Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Applications</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>No_New_Deleted_Reviews_for_Approved_Apps</fullName>
        <active>true</active>
        <description>Once a Job Application is approved, there can be no new Reviews. Likewise, no Reviews can be deleted.</description>
        <errorConditionFormula>AND( ISPICKVAL( Status__c , &quot;Approved&quot;) ,  ISCHANGED( Total_Reviews__c ))</errorConditionFormula>
        <errorMessage>Once a Job Application is approved, there can be no change to the number of Reviews.</errorMessage>
    </validationRules>
</CustomObject>